--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,7 +18,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Battleground.Battleground
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 GlobalDefaultServerGameMode=None
