--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -53,6 +53,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=E)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
++AxisMappings=(AxisName="Left Track Throttle",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Right Track Throttle",Scale=-1.000000,Key=D)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
