--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -55,6 +55,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=-1.000000,Key=D)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
